--- a/usermanager/src/main/webapp/views/employee.html
+++ b/usermanager/src/main/webapp/views/employee.html
@@ -7,7 +7,7 @@
 			<th>First Name</th>
 			<th>Last Name</th>
 			<th>Email</th>			
-		    <th></th>
+		    <th>{{message}}</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -63,7 +63,7 @@ col-form-label">&nbsp;Last Name</label>
      <div class="offset-sm-2 col-sm-10">
 
 		<input type="button" value="{{actionLabel}}"class="btn btn-primary" id="btnSubmit" ng-click="updateUser();">
-		<input type="button" value="Cancel" class="btn btn-primary" ng-click="deleteUser();">
+		<input type="button" value="Cancel" class="btn btn-primary" ng-click="cancelUpdate();">
      </div>
    </div>
  </form>
