--- a/usermanager/src/main/webapp/views/employee.html
+++ b/usermanager/src/main/webapp/views/employee.html
@@ -1,5 +1,5 @@
 <div ng-hide = "editMode">
-	Employee List: <input type="button" class="btn btn-info" value="Add User" id="btnAddUser" ng-click="addUser();">
+	Web User List:&nbsp; <input type="button" class="btn btn-info" value="Add User" id="btnAddUser" ng-click="addUser();">
 	
 	<table id="employeeTable" datatable="ng" class="table table-striped table-bordered">
 		<thead>
