--- a/usermanager/src/main/webapp/views/employee.html
+++ b/usermanager/src/main/webapp/views/employee.html
@@ -1,5 +1,7 @@
 <div ng-hide = "editMode">
-	Web User List:&nbsp; <input type="button" class="btn btn-info" value="Add User" id="btnAddUser" ng-click="addUser();">
+	<h2>Web User List:</h2>
+	
+	&nbsp; <input type="button" class="btn btn-info" value="Add User" id="btnAddUser" ng-click="addUser();">
 	
 	<table id="employeeTable" datatable="ng" class="table table-striped table-bordered">
 		<thead>
