--- a/usermanager/src/main/webapp/views/employee.html
+++ b/usermanager/src/main/webapp/views/employee.html
@@ -1,5 +1,5 @@
 <div ng-hide = "editMode">
-	<h3>The New Web User List:</h3>
+	<h3>The Web User List:</h3>
 	
 	&nbsp; <input type="button" class="btn btn-info" value="Add User" id="btnAddUser" ng-click="addUser();">
 	
